# ReCoDe

./: .gitignore  CMakeLists.txt  Makefile  README.md  linux_setup.py  setup.py
config/: recode_params.txt  recode_params_2.txt  recode_params_3.txt  recode_params_C.txt  recode_params_L1.txt  recode_params_bd.txt  recode_params_mrcz_comparison_12-bit.txt  recode_params_mrcz_comparison_16-bit.txt  recode_params_test.txt
include/: SimpleOpt.h
lib/: zlib.lib
results/: comp_algo_comparisons.txt  hists.txt  location_info_compression_results.txt
scratch/: Frame_0_12-13-59.436.bin.rc1  Frame_0_12-13-59.436.bin.rc1_part000
simulations/: fly.c  fly_runner.py  mpitest.c  multifly.c  recode_on_the_fly_results
src/: L1.h  L1_Generic.h  L1_next.h  L2.h  L3.h  L3_next.h  L4.h  README.md  ReCoDeConfig.h.in  argparser.h  commons.h  compressor.h  fileutils.h  fly.cpp  initparser.h  logger.h  mrc_header.h  mrchandler.h  pyrecoder_old.cpp  reader.h  recode.c  recode.cpp  recode_header.h  recode_next.c  recode_queue_manager.py  recode_server.py  recode_server_v2.py  recode_tests.c  recode_utils.h  recodefs.h  recoder.py  sequence_reader.cpp  sequence_reader.h  sequence_reader.hpp
tests/: Extract_Validation_Frames.py  L1_test.py  StreamPix_Simulator.py  loc_info_rep_compress_tests.c  mrc_reader_test.py  recode_comp_alg_comparisons.c  recode_reader_test.py  recode_test.py  recode_writer_test.py  seq_reader_test.py  sequence_reader_test.cpp  temp.py  unreduced_compression.c
win32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  OnTheFlyReCoDe.vcxproj  ReCoDe.sln  (+6 more)
(+367 files in other folders)
